--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+$ cat .gitignore
+.gitignore
+*.o
+*.mod
+Makefile
+*.pdf
+*.f90~
+*.log
+*.aux
+*.orig
+*.txt~
+boltz
+Makefile~
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
